[project]
name = "pycloudflared"
version = "0.2.0"
description = "unofficial cloudflared python wrapper"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "dowon", email = "ks2515@naver.com" },
]
dependencies = [
  "tomli; python_version < '3.11'",
  "tqdm",
]

[project.urls]
repository = "https://github.com/Bing-su/pycloudflared"

[project.scripts]
pycloudflared = "pycloudflared.__main__:main"

[dependency-groups]
dev = ["tomli"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "FAST",
  "FURB",
  "I001",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TC",
  "TRY",
  "UP",
  "W",
]
ignore = ["B905", "E501", "PLW1508"]
unfixable = ["F401"]

[tool.uv.build-backend]
module-root = ""
